[package]
name = "cd1574"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "parking_lot", "time", "signal","rt", "macros"] }
hyper = { version = "0.14.18", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["native-tokio", "http1", "http2", "tls12"], default-features = false }
tower = { version = "0.4.12", features = ["retry", "timeout", "util"], default-features = false }
tower-http = { version = "0.3.1", features = ["follow-redirect"] }
serde =  { version = "1.0.136", features = ["derive"] }
serde_json =  { version = "1.0.79", features = ["raw_value"] }
tokio-postgres = "0.7.6"
async-trait = "0.1.53"
tracing = { version = "0.1.34", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3.11", features = ["std", "fmt", "ansi", "json", "smallvec"], default-features = false }
atty = "0.2.14"
flume = "0.10.12"
futures = { version = "0.3.21", features = ["std"], default-features = false }
http-body = "0.4.4"
routerify = "3"
thiserror = "1.0"
routerify-json-response = "3"
arc-swap = "1.5.0"
serde_yaml = "0.8.24"
csv = "1.1.6"
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "postgres" ] }
hyper-staticfile = "0.9.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1.18.2", features = ["rt", "macros"] }
